# movix

./: README.md  pyproject.toml  requirements.txt
src/movixpy/: io.py  proc.py  viewer.py
src/movixpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/movixpy/io/: frames_dir.py  video_file.py
src/movixpy/proc/: ffmpeg_runner.py  opencv_runner.py
src/movixpy/viewer/: single_viewer.py
tests/: test_frames_dir.py  test_io.ipynb  test_single_viewer.py  test_viewer.ipynb
