[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "movixpy"
version = "0.1.0"
authors = [
    { name="Nathan Monzani", email="nathanmonzani17@gmail.com"}
]
description = ""
dependencies = [
    "opencv-python-headless>=4.0",
    "imageio-ffmpeg"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]